# Facturation

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/: configDict.py  database.py  db_config.py  main.py
src/CSRF/: CSRF_config.py  csrf_service.py
src/api/dependencies/: auth.py  enterprise.py
src/api/dependencies/gmail/: background_task_handler.py  gmail_service_helper.py
src/api/models/: _init_.py  client.py  enterprise.py  invoice.py  product.py
src/api/models/gmail/: email_log_model.py
src/api/models/public/: user.py
src/api/routers/: _init_.py  auth_router.py  client_invoices_router.py  client_router.py  dashboard_routes.py  enterprise_profile_router.py  enterprise_router.py  invoice_router.py  product_router.py  report_generate.py
src/api/routers/crud/: crud_enterprise.py  crud_invoice.py  crud_report.py
src/api/schemas/: enterprise.py  enterprise_profile.py  invoice.py
src/api/utils/: auth_utils.py
src/core/: shared.py
src/static/css/: client.css  facture.css  pdf.css  responsive-client.css
src/templates/components/: header.html  sidebar.html
src/templates/layouts/: base.html
src/templates/pages/: addClient.html  addEnterprise.html  addProduct.html  clients.html  createInvoice.html  dashboard.html  enterprise.html  enterprise_profile.html  error.html  generateReport.html  invoices.html  pdf.html  product.html
src/templates/pages/User/: client_view_inovices.html  dashboard.html
src/templates/pages/User/LandingPage/: landing-page.html
src/templates/pages/User/login/: login.html
src/templates/pages/User/userComponents/: header.html
