[tool.poetry]
name = "facturation"
version = "0.1.0"
description = "FastAPI Facturation Project"
authors = ["ameerchand30 <ameerchand30@gmail.com>"]
packages = [{include = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = "^0.24.0"
jinja2 = "^3.1.5"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
python-multipart = "^0.0.20"
weasyprint = "^63.1"
beautifulsoup4 = "^4.12.3"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
authlib = "^1.5.2"
itsdangerous = "^2.2.0"
fastapi-jwt-auth = "^0.5.0"
httpx = "^0.28.1"
apscheduler = "^3.11.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.166.0"
openai = "^1.72.0"
plotly = "^6.0.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.10"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
